--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Jeeva's Gemini Chat Bot</title>
 <style>
+/* --- CSS same as before --- */
 * { margin:0; padding:0; box-sizing:border-box; }
 body { font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background:linear-gradient(135deg,#667eea 0%,#764ba2 100%); min-height:100vh; display:flex; justify-content:center; align-items:center; }
 .chat-container { width:90%; max-width:800px; height:80vh; background:white; border-radius:20px; box-shadow:0 20px 40px rgba(0,0,0,0.1); display:flex; flex-direction:column; overflow:hidden; }
@@ -82,6 +83,9 @@ const chatForm = document.getElementById('chatForm');
 const loading = document.getElementById('loading');
 let conversationHistory = [];
 
+// Flexible API base (works on localhost & Render)
+const API_BASE = window.location.origin;
+
 function addMessage(content, isUser=false){
     const messageDiv = document.createElement('div');
     messageDiv.className = `message ${isUser?'user':'assistant'}`;
@@ -104,7 +108,7 @@ async function sendMessage(message){
     showLoading(true);
     sendButton.disabled = true;
     try{
-        const response = await fetch('https://jeeva-gemini-backend.onrender.com/chat',{
+        const response = await fetch(`${API_BASE}/chat`,{
             method:'POST',
             headers:{'Content-Type':'application/json'},
             body:JSON.stringify({message: message, history: conversationHistory})
@@ -116,7 +120,6 @@ async function sendMessage(message){
         conversationHistory.push(`Assistant: ${data.response}`);
         conversationHistory = data.history;
 
-        // Voice output
         const utterance = new SpeechSynthesisUtterance(data.response);
         speechSynthesis.speak(utterance);
     }catch(err){ console.error(err); addMessage("Error: "+(err.message||err), false); }
@@ -125,7 +128,7 @@ async function sendMessage(message){
 
 async function clearChat(){
     try{
-        const response = await fetch('https://jeeva-gemini-backend.onrender.com/chat/clear',{ method:'DELETE' });
+        const response = await fetch(`${API_BASE}/chat/clear`,{ method:'DELETE' });
         if(response.ok){
             chatMessages.innerHTML = `
             <div class="message assistant">
@@ -139,7 +142,6 @@ async function clearChat(){
     }catch(err){ console.error('Error clearing chat:', err); }
 }
 
-// Voice input
 voiceButton.addEventListener('click', ()=>{
     const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
     recognition.lang = 'en-US';
