--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Jeeva's Gemini Chat Bot</title>
+<title>Jeeva's  Chat Bot</title>
 <style>
 * { margin:0; padding:0; box-sizing:border-box; }
 body { font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background:linear-gradient(135deg,#667eea 0%,#764ba2 100%); min-height:100vh; display:flex; justify-content:center; align-items:center; }
@@ -45,8 +45,8 @@ body { font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background:l
 <body>
 <div class="chat-container">
     <div class="chat-header">
-        <h1>🤖 Jeeva's Gemini Chat Bot</h1>
-        <p>Powered by Google Gemini AI</p>
+        <h1>🤖 WEb Mind  Chat Bot</h1>
+        <p>   Blends Neural + Web</p>
     </div>
 
     <div class="system-prompt-container">
@@ -58,7 +58,7 @@ body { font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background:l
         <div class="message assistant">
             <div class="message-label">Assistant</div>
             <div class="message-content">
-                Hello! I'm Jeeva's AI assistant powered by Gemini. How can I help you today?
+                Hello! I'm Jeeva's AI assistant powered by Neurax. How can I help you today?
             </div>
         </div>
     </div>
